--- a/Nível 0/nivel_0.html
+++ b/Nível 0/nivel_0.html
@@ -11,9 +11,10 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
-        .form{
-            width: center;   
+        .formu{
+            margin: auto;
         }
+
         table{
             width: 500px;
             border-collapse: collapse;
@@ -24,83 +25,87 @@
             padding: 10px;
         }
 
-        thead{
+        thead, tfoot{
             background-color: rgba(128, 128, 128, 0.534);
         }
+
+
 
     </style>
 </head>
 <body>
 
-<div class="form">
-    
-    <h1>Aula 1, Nível 0</h1>
+    <div class="formu">
 
-    <table>
-        <thead>
-            <tr>
-                <th>Português</th>
-                <th>Inglês</th>
-                <th>Pronúncia</th>
-            </tr>
-        </thead>
+        <h1>Aula 1, Nível 0</h1>
 
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>                
-        </tbody>
+        <table>
+            <thead>
+                <tr>
+                    <th>Português</th>
+                    <th>Inglês</th>
+                    <th>Pronúncia</th>
+                </tr>
+            </thead>
 
-    </table>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>                
+            </tbody>
 
-</div>
+        </table>
+
+        <p>Prof. Sandy - ABC Fluent | <a href="https:www.youtube.com/c/ABCFluent" target="_blank">youtube.com/c/ABCFluent</a></p>
+
+    </div>
 
 </body>
 </html>
