--- a/Nível 0/aula_1.html
+++ b/Nível 0/aula_1.html
@@ -32,6 +32,11 @@
             background-color: rgba(128, 128, 128, 0.534);
         }
 
+        a{
+            font-style: italic;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
 
 
     </style>
@@ -55,12 +60,12 @@
                 <tr>
                     <td>De pressa, se apresse</td>
                     <td>Hurry</td>
-                    <td>RÂ <span style="color: blue;">r</span>i</td>
+                    <td>↑RÂ ↓<span style="color: blue;">r</span>i</td>
                 </tr>
                 <tr>
                     <td>O que?</td>
                     <td>What</td>
-                    <td>ua <span style="color: grey;">t</span></td>
+                    <td>ua <span style="color:silver;">t</span></td>
                 </tr>
                 <tr>
                     <td>Oi! Olá!</td>
@@ -75,7 +80,7 @@
                 <tr>
                     <td>Sim! Com certeza absoluta!</td>
                     <td>Absolutely</td>
-                    <td>Á<span style="color: gray;">b</span> sâ LU<span style="color: gray;">t</span> li</td>
+                    <td>↑Á<span style="color: silver;">b</span> ↓sâ ↑LU<span style="color: silver;">t</span> ↓li</td>
                 </tr>
                 <tr>
                     <td>Claro! Certo!</td>
@@ -108,7 +113,7 @@
                 <tr>    
                     <th>Prof. Sandy</th> 
                     <th>ABC Fluent</th>
-                    <th><a href="https:www.youtube.com/c/ABCFluent" target="_blank">youtube.com/c/ABCFluent</a></th>
+                    <th><a href="https://www.youtube.com/watch?v=S45kHeWnT0M&list=PLxJY3neuatlrhpLKDWOYQgQ3XPBWV-D_K&ab_channel=ABCFluent" target="_blank">Acessar aula</a></th>
                 </tr>    
             </tfoot>    
 
