--- a/nivel_0/aula_1.html
+++ b/nivel_0/aula_1.html
@@ -5,40 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nível 0</title>
-    <link rel="shortcut icon" href="icons8-en-16.favicon" type="image/x-icon">
-    
-    <style>
-        *{
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 2em;
-        }
-
-        table{
-            margin: auto;
-            border-collapse: collapse;
-        }
-
-        td, th{
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 1.1em;
-        }
-
-        thead, tfoot{
-            background-color: rgba(128, 128, 128, 0.534);
-        }
-
-        a{
-            font-style: italic;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-    </style>
-
+    <link rel="shortcut icon" href="../estilo/icons8-en-16.favicon" type="image/x-icon">
+    <link rel="stylesheet" href="../estilo/style.css">
 </head>
 
 <body>
@@ -65,7 +33,7 @@
                 <tr>
                     <td>O que?</td>
                     <td>What</td>
-                    <td>ua <span style="color:silver;">t</span></td>
+                    <td>ua <span style="color:grey;">t</span></td>
                 </tr>
                 <tr>
                     <td>Oi! Olá!</td>
@@ -80,7 +48,7 @@
                 <tr>
                     <td>Sim! Com certeza absoluta!</td>
                     <td>Absolutely</td>
-                    <td>↑Á<span style="color: silver;">b</span> ↓sâ ↑LU<span style="color: silver;">t</span> ↓li</td>
+                    <td>↑Á<span style="color: grey;">b</span> ↓sâ ↑LU<span style="color: grey;">t</span> ↓li</td>
                 </tr>
                 <tr>
                     <td>Claro! Certo!</td>
