--- a/nivel_0/aula_1.html
+++ b/nivel_0/aula_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nível 0</title>
+    <title>Nível 0, A1</title>
     <link rel="shortcut icon" href="../estilo/icons8-en-16.favicon" type="image/x-icon">
     <link rel="stylesheet" href="../estilo/style.css">
 </head>
