--- a/nivel_0/aula_2.html
+++ b/nivel_0/aula_2.html
@@ -61,9 +61,9 @@
                     <td>nau</td>
                 </tr>
                 <tr>
-                    <td>É mesmo? Verdade</td>
+                    <td>É mesmo? Verdade?</td>
                     <td>Really</td>
-                    <td><span style="color: blue;">R</span>í li</td>
+                    <td><span style="color: blue;">R</span>Í li</td>
                 </tr>
 
                 <tr>
