--- a/nivel_0/desafio_2.html
+++ b/nivel_0/desafio_2.html
@@ -61,8 +61,8 @@
                     <td>X - Stop. -Stop what?</td>
                 </tr>
                 <tr>
-                    <td>Yes. -Really</td>
-                    <td>Sim. -Com certeza</td>
+                    <td>Yes. -Really? Yes</td>
+                    <td>Sim. -Tem certeza? Yes</td>
                     <td>O</td>
                 </tr>
 
