--- a/nivel_0/desafio_2.html
+++ b/nivel_0/desafio_2.html
@@ -13,7 +13,7 @@
 
     <section class="formu">
 
-        <h1>Desafio aula 2, N0</h1>
+        <h1>Desafio 2</h1>
 
         <table>
             <thead>
