--- a/nivel_0/desafio_3.html
+++ b/nivel_0/desafio_3.html
@@ -13,7 +13,7 @@
 
     <section class="formu">
 
-        <h1>Desafio Aula 3, N0</h1>
+        <h1>Desafio 3</h1>
 
         <table>
             <thead>
