--- a/nivel_0/desafio_4.html
+++ b/nivel_0/desafio_4.html
@@ -87,7 +87,7 @@
                     <td>O</td>
                 </tr>
                 <tr>
-                    <td>Tuais, two times</td>
+                    <td>Twice, two times</td>
                     <td>Duas vezes, 2X</td>
                     <td>O</td>
                 </tr>
