Class nine (two)

--- a/nivel_0/desafio_8.html
+++ b/nivel_0/desafio_8.html
@@ -28,42 +28,42 @@
                 <tr>
                     <td>Help me, help you</td>
                     <td>Me ajude a te ajudar</td>
-                    <td></td>
+                    <td>O</td>
                 </tr>
                 <tr>
                     <td>Right here, right now</td>
                     <td>Bem aqui, nesse exato momento</td>
-                    <td></td>
+                    <td>O</td>
                 </tr>
                 <tr>
                     <td>come home, right now</td>
                     <td>Venha pra casa, nesse exato momento</td>
-                    <td></td>
+                    <td>O</td>
                 </tr>
                 <tr>
                     <td>Really? Welcome</td>
                     <td>Verdade? bem-vinda</td>
-                    <td></td>
+                    <td>X - Really? How come?</td>
                 </tr>
                 <tr>
                     <td>Guess what?</td>
                     <td>Adivinha o que?</td>
-                    <td></td>
+                    <td>O</td>
                 </tr>
                 <tr>
                     <td>Go home</td>
                     <td>Vá para casa</td>
-                    <td></td>
+                    <td>O</td>
                 </tr>
                 <tr>
                     <td>Right there</td>
                     <td>Bem ali</td>
-                    <td></td>
+                    <td>X - Be right there</td>
                 </tr>
                 <tr>
                     <td>Come back home</td>
                     <td>Volte (para cá) para casa</td>
-                    <td></td>                
+                    <td>O</td>                
             </tbody>
 
             <tfoot>
